# HCMUS-Networking-RemoteDesktop

./: .gitignore  CMakeLists.txt  README.md  build.bat
Application/: checkCommand.cpp  checkCommand.h  config.cpp  config.h  executeCommand.cpp  executeCommand.h  keylogger.cpp  keylogger.h  lib.h  listProgram.cpp  listProgram.h  recording.cpp  recording.h  sendEmail.cpp  sendEmail.h  sendFile.cpp  sendFile.h  sendPicture.cpp  sendPicture.h  sendScreenshot.cpp  sendScreenshot.h  shutdownProgram.cpp
Client/: client.cpp
Client/ClientHandle/: checkCommand.cpp  checkCommand.h  commandUtils.cpp  commandUtils.h  sendEmail.cpp  sendEmail.h
Client/ClientUI/: CreateUI.cpp  CreateUI.h  RemoteAdminUI.cpp  RemoteAdminUI.h  Renderer.cpp  Types.cpp  Types.h
Client/ClientUI/AdminUI/: MediaHandling.cpp  RemoteAdminUI.cpp  RemoteAdminUI.h  Renderer.cpp  VideoHandling.cpp
Client/clientUI/: example.h
Core/: socketFiles.cpp  socketFiles.h
IMAP/: main.cpp
ImapTest/: main.cpp
Server/: commandProcessor.cpp  commandProcessor.h  server.cpp  serverHandler.cpp  serverHandler.h
Server/Application/: executeCommand.cpp  executeCommand.h  listProgram.cpp  recording.cpp  sendPicture.h  sendScreenshot.cpp  sendScreenshot.h  shutdownProgram.cpp  shutdownProgram.h
